# boid-simulation

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  camera.cpp  limb.cpp  limb.h  main.cpp  model.cpp  model.h  shader.h  window.cpp  window.h
assets/shaders/: default_vertex_shader.vert
glad/include/glad/: glad.h
shaders/: FragmentShader.frag  VertexShader.vert  default_vertex_shader.vert
src/: CMakeLists.txt  camera.cpp  camera.h  limb.cpp  limb.h  main.cpp  matrix4.h  quaternion.h  shader.cpp  shader.h  vector3.h  window.cpp  window.h
src/demo/: boid.h  boids_demo.cpp  boids_demo.h  demo.cpp  demo.h
src/engine/: camera.cpp  camera.h  cube.cpp  cube.h  demo.cpp  demo.h  drawing.cpp  drawing.h  inverse_kinematics.cpp  inverse_kinematics.h  limb.cpp  limb.h  model.cpp  model.h  shader.cpp  shader.h  transform.h  window.cpp  window.h
src/math/: matrix_3.cpp  matrix_3.h  matrix_4.cpp  matrix_4.h  point_3.cpp  point_3.h  quaternion.cpp  quaternion.h  transform.cpp  transform.h  vector3.cpp  vector3.h  vector_3.cpp  vector_3.h  vector_4.cpp  vector_4.h
src/sim/: boid.cpp  boid.h  boid_simulation.cpp  boid_simulation.h  simulation.cpp  simulation.h
tests/: CMakeLists.txt  test_matrix_3.cpp  test_matrix_4.cpp  test_point_3.cpp  test_quaternion.cpp  test_transform.cpp  test_vector3.cpp  test_vector_3.cpp  test_vector_4.cpp  testing_utility.h
